# IG3A-Info-TP

./: CR.tex  README.md
TP1-TP2/TP1/: main.c
assets/TP1 + TP2  Fonctions récursives, exercices sur matrices /programmesTP1+TP2/exercice1/: generationTableaux.c  main.c
assets/TP1 + TP2  Fonctions récursives, exercices sur matrices /programmesTP1+TP2/exercice6/: mainHarmonique.c  mainPiLeibniz.c
assets/TP3 + TP4  Manipulation des arbres/programmesTP3+TP4/exercice3/: mainExo3.c  mainExostats.c  modifArbres.c
assets/TP3 + TP4  Manipulation des arbres/programmesTP3+TP4/exercice4/: mainExo4.c
assets/TP5 + TP6 hiérarchie de processus, signaux/programmesTP5+TP6/exercice11/: programme1.c
assets/TP5 + TP6 hiérarchie de processus, signaux/programmesTP5+TP6/exercice9/: programme1.c
assets/TP7 + TP8 programmation : communication socket/programmesTP7+TP8/exercice4/: exempleHTML.html
assets/TP7 + TP8 programmation : communication socket/programmesTP7+TP8/exercice5/: clientUDP.c  serveurUDP.c
assets/cpp/TP1 + TP2  Fonctions récursives, exercices sur matrices /programmesTP1+TP2/exercice2/: modifTableauxNonTries.c
assets/cpp/TP1 + TP2  Fonctions récursives, exercices sur matrices /programmesTP1+TP2/exercice3/: algosTri.c
assets/cpp/TP1 + TP2  Fonctions récursives, exercices sur matrices /programmesTP1+TP2/exercice4/: manipTableauxTries.c
assets/cpp/TP1 + TP2  Fonctions récursives, exercices sur matrices /programmesTP1+TP2/exercice6/: mainFactorielle.c
assets/cpp/TP1+TP2/programmesTP1+TP2/exercice1/: manipTableauxNonTries.c
assets/cpp/TP1+TP2/programmesTP1+TP2/exercice2/: modifTableauxNonTries.h
assets/cpp/TP1+TP2/programmesTP1+TP2/exercice3/: algosTri.h
assets/cpp/TP1+TP2/programmesTP1+TP2/exercice5/: modifTableauxTries.c  modifTableauxTries.h
assets/cpp/TP1+TP2/programmesTP1+TP2/exercice7/: bubbleBreaker.c
assets/cpp/TP3 + TP4  Manipulation des arbres/programmesTP3+TP4/exercice2/: arbresFctrecursives.c
assets/cpp/TP3 + TP4  Manipulation des arbres/programmesTP3+TP4/exercice3/: modifArbres.h
assets/cpp/TP3 + TP4  Manipulation des arbres/programmesTP3+TP4/exercice4/: parcoursArbres.h
assets/cpp/TP3+TP4/programmesTP3+TP4/exercice1/: arbresbasiques.c  arbresbasiques.h  main.c
assets/cpp/TP3+TP4/programmesTP3+TP4/exercice2/: arbresFctRecursives.h  mainExo2.c
assets/cpp/TP3+TP4/programmesTP3+TP4/exercice4/: parcoursArbres.c
assets/cpp/TP5 + TP6 hiérarchie de processus, signaux/programmesTP5+TP6/exercice1/: boucleShell.sh
assets/cpp/TP5 + TP6 hiérarchie de processus, signaux/programmesTP5+TP6/exercice11/: programme3.c
assets/shell/: unGrosBordel.txt
report/: .gitignore  README.md  build.sh  main.idx  main.ind  main.tex  report.tex  structure.tex  tp1+tp2.tex  tp1.tex  tp11+tp12.tex
report/cpp/: cover4.html  tp1+tp2.tex  tp11+tp12.tex  tp3+tp4.tex  tp5+tp6.tex  tp7+tp8.tex  tp9+tp10.tex
report/cpp/Pictures/: tp5+tp6-ex10.xml  tp5+tp6-ex9.xml  tp7+tp8-DNS.xml  tp7+tp8-relay-UDP-TCP.xml  tp9+10-inheritance.xml
report/shell/: shell-tp1.tex  shell-tp2.tex  tp1+tp2.tex  tp1.tex  tp2.tex
sources/: CMakeLists.txt
sources/TP1/: algosTri.c  generationTableaux.c  main.c  manipTableauxNonTries.c  manipTableauxNonTries.h  manipTableauxTries.c  manipTableauxTries.h  modifTableauxNonTries.c  modifTableauxTries.c
sources/TP3/: arbresBasiques.c  arbresBasiques.h  arbresFctRecursives.c  arbresFctRecursives.h  main.c  mainExostats.c  modifArbres.c  modifArbres.h
sources/TP5/: TestKillerSignal.sh  ex2.sh  ex3-TestKillerSignal.sh  ex3-shellLoop.sh
sources/cpp/: CMakeLists.txt  README.md
sources/cpp/TP1/: algosTri.c  generationTableaux.c  generationTableaux.h  main.c  manipTableauxNonTries.c  manipTableauxNonTries.h  manipTableauxTries.c  modifTableauxNonTries.c  modifTableauxTries.c
sources/cpp/TP1-2/: algosTri.c  algosTri.h  bubbleBreaker.c  bubbleBreaker.h  factorielle.c  factorielle.h  generationTableaux.c  generationTableaux.h  harmonique.c  harmonique.h  main.c  manipTableauxNonTries.c  manipTableauxNonTries.h  manipTableauxTries.c  manipTableauxTries.h  modifTableauxNonTries.c  modifTableauxNonTries.h  modifTableauxTries.c  modifTableauxTries.h  piLeibniz.c  piLeibniz.h
sources/cpp/TP2/: bubbleBreaker.c  bubbleBreaker.h  factorielle.c  factorielle.h  harmonique.c  harmonique.h  main.c  piLeibniz.c  piLeibniz.h
sources/cpp/TP3/: arbresBasiques.h  arbresFctRecursives.c  arbresFctRecursives.h  main.c  modifArbres.h
sources/cpp/TP3-4/: arbresBasiques.c  arbresBasiques.h  arbresFctRecursives.c  arbresFctRecursives.h  main.c  mainExostats.c  modifArbres.c  modifArbres.h  parcoursArbres.c  parcoursArbres.h
sources/cpp/TP5/: main.c
sources/cpp/TP5-6/: boucleShell.sh  ex1.c  ex10-conjonction1.c  ex10-conjonction2.c  ex11-programme1.c  ex11-programme2.c  ex11-programme3.c  ex2-boucle.sh  ex2.c  ex3-TestKillerSignal.sh  ex3-shellLoop.sh  ex4-captureShell.sh  ex4.c  ex5-boucleShell.sh  ex6.c  ex7-fork.c  ex7-fork1.c  ex7-fork2.c  ex9-programme1.c  ex9-programme2.c  ex9-programme3.c  main.c
sources/cpp/TP7-8/: clientUDP.c  getHostByName.c  relaiUDPTCP.c  serveurTCP.c  serveurUDP.c
sources/cpp/TP9-10/: Guerrier.cpp  Guerrier.h  Mage.cpp  Mage.h  MageGuerrier.cpp  MageGuerrier.h  Personne.cpp  Personne.h  main.cpp
sources/cpp/libs/: libs.c  libs.h
sources/shell/TP1-2/: ex5.sh  ex6-parametres.sh  ex6-parametres2.sh  ex7-vador.sh  ex7-yoda.sh
sources/shell/TP2/: ex5.sh  ex6-parametres.sh  ex6-parametres2.sh  ex6.sh  ex7-vador.sh  ex7-yoda.sh
sources/shell/TP2/ex7/: vador.sh  yoda.sh
(+6 files in other folders)
